    - Actually added the yttrium plastic pellet recipe. whoops! it'll be moved into its own technology.. soon...

  Fixes:
    - ACTUTALLY fixed dirty boilers fluid boxes being fucked.
    - Added locales for chunk plate recipes.
    - Fixed depleted uranium fuel cells not being in the correct subgroup.
    - Made byproduct handling take the correct science packs.

---------------------------------------------------------------------------------------------------
Version: 0.6.003
Date: 2024-11-30
  The I WANT ONE Update:

  Fixes:
    - ACTUTALLY fixed dirty boilers fluid boxes being fucked.
    - Added locales for chunk plate recipes.

---------------------------------------------------------------------------------------------------
Version: 0.6.002
Date: 2024-11-30
  The i had 20 minutes to fix this Update:

  Fixes:
    - Fixed electronic circuits not being craftable at the start of the game.
    - Fixed inserters not being craftable when they should be.
    - Presumably fixed dirty boilers not working properly.

---------------------------------------------------------------------------------------------------
Version: 0.6.001
Date: 2024-11-29
  The i want ONE, ONE!!! update to go smoothly Update:

  Fixes:
    - Fixed ores not spawning??? i just want to sleep man

---------------------------------------------------------------------------------------------------
Version: 0.6.000
Date: 2024-11-29
  The metalloid? i hardly know her! (oh and some graphical updates ig) Update:

  Additions:
    - Added Boron.
    - Added Silicon.
    - Added Tellurium.
    - Added Germanium.
    - Added Yttrium.
    - Added Beryllium. Does nothing.
    - Added two new ways to make glass and glass products: borosilicate glass and molten potassium. One allows for betterer recipes of stuff like glass bottles and fibers, and the other allows for more efficient glass recipes.
    - Added robochargers and robostashers, like the thing from that one mod.