@@ -256,7 +256,7 @@ pm-radiation-resistant-panelling=Radiation-resistant Panelling
 pm-radiation-resistant-tubing=Radiation-resistant Tubing
 pm-seed-crystal=Seed crystal
 pm-cobalt-catalyst=Cobalt catalyst
-pm-yttrium-catalyst=Yttria catalyst
+pm-yttrium-catalyst=Yttrium catalyst
 pm-processing-breadboard-mold=Processing breadboard mold
 pm-processing-integrated-circuit-mold=Processing integrated circuit mold
 pm-electronic-integrated-circuit-mold=Basic integrated circuit mold
@@ -876,7 +876,7 @@ pm-zinc-chunk-plate=Zinc chunk plate
 pm-basic-basic-wood-growth=Basic wood 'growing'
 pm-coal-burning=Coal burning
 pm-advanced-electronic-circuit-breadboard=Advanced electronic circuit breadboard
-pm-advanced-electronic-intergrated-circuits=Advanced electronic integrated circuits
+pm-advanced-electronic-integrated-circuits=Advanced electronic integrated circuits
 pm-advanced-fluid-circuit-breadboard=Advanced fluid-resistant circuit breadboard
 pm-advanced-fluid-integrated-circuits=Advanced fluid-resistant integrated circuits
 pm-advanced-advanced-circuit-breadboard=Advanced advanced circuit breadboard
@@ -915,11 +915,11 @@ pm-gold-wire-casting=Gold wire casting
 pm-indium-wire-casting=Indium wire casting
 pm-aluminium-fiberoptic-cable=Aluminium fiberoptic cable
 pm-iron-gear-casting=Iron gear casting
-pm-brass-cog-casting=Brass cog casting
+pm-brass-gear-casting=Brass gear casting
 pm-heavy-lube-electric-engine-unit=Heavy lubricant electric engine unit
 pm-basic-motor=Basic motor
 pm-copper-disk-anodization=Copper disk anodization
-pm-zinc-disk-cathodisation=Zinc disk cathodisation
+pm-zinc-disk-cathodization=Zinc disk cathodization
 pm-voltatic-pile=Voltatic pile
 pm-voltatic-pile-fixing=Voltatic pile fixing
 pm-vanadium-battery-charging=Vanadium-oxide battery charging
@@ -939,8 +939,8 @@ pm-module-efficiency-lights=Efficiency module lights
 pm-module-productivity-lights=Productivity module lights
 pm-ferrum-ferric-chloride=Ferrum-based ferric chloride
 pm-metal-ferric-chloride=Iron-based ferric chloride
-pm-fluid-breadboard=Fluid-resistant circuit breadboard
-pm-better-transitors=Better transistors
+pm-fluid-circuit-breadboard=Fluid-resistant circuit breadboard
+pm-better-transistors=Better transistors
 pm-plastic-transition-metal-science-pack=Plastic transition metal science pack
 pm-plastic-advanced-transition-metal-science-pack=Plastic advanced transition metal science pack
 pm-plastic-advanced-advanced-transition-metal-science-pack=Plastic advanced-advanced transition metal science pack
@@ -951,13 +951,13 @@ pm-plastic-metalloid-science-pack=Plastic metalloid science pack
 pm-FUCK-transition-metal-science-pack=Francium transition metal science pack
 pm-FUCK-advanced-transition-metal-science-pack=Francium advanced transition metal science pack
 pm-FUCK-advanced-advanced-transition-metal-science-pack=Francium advanced-advanced transition metal science pack
-pm-FUCK-reactive-non-metasl-science-pack=Francium reactive non-metals science pack
+pm-FUCK-reactive-non-metals-science-pack=Francium reactive non-metals science pack
 pm-FUCK-post-transition-metal-science-pack=Francium post-transition metal science pack
 pm-FUCK-alkali-metal-science-pack=Plastic alkali metal science pack
 pm-FUCK-metalloid-science-pack=Plastic metalloid science pack
 pm-stainless-steel-tank=Stainless steel tank
 pm-lithium-battery-equipment=Lithium battery equipment
-pm-lithium-battery-MK2-equipment=Lithium battery MK2 equipment
+pm-lithium-battery-mk2-equipment=Lithium battery MK2 equipment
 pm-spent-fuel-rod-reprocessing=Spent fuel rod reprocessing
 pm-cinnabar-processing=Mercury ore leeching
 pm-chromic-cinnabar-processing=Chronmic mercury ore leeching
@@ -1049,6 +1049,9 @@ pm-nitrogen-atmopsheric-filtering=Nitrogen atmopsheric filtering
 pm-chlorine-atmopsheric-filtering=Chlorine atmopsheric filtering
 pm-carbon-dioxide-atmopsheric-filtering=CO2 atmopsheric filtering
 pm-trace-gas-atmopsheric-filtering=Trace gas atmopsheric filtering
+pm-yttrium-ethylene-polymerisation=Yttrium ethylene polymerisation
+pm-garnet-saw=Garnet dust saw
+pm-water-hydrogen-peroxide=Water-based hydrogen peroxide
 
 pm-iron-melting=Iron plate melting
 pm-copper-melting=Copper plate melting
